@@ -1,4 +1,4 @@
-#	$Id: RELEASE.HOWTO,v 1.29 2010-10-09 22:26:20 guru Exp $
+#	$Id: RELEASE.HOWTO,v 1.30 2010-11-01 23:10:43 guru Exp $
 #
 #		FOR 4.x SERIES
 
@@ -47,7 +47,7 @@ must ensure you do all the steps listed below:
 If still good to go:
 
 6.  Tag the release(s), e.g.
-    cvs -q tag Release_2010_07_15_GMT_4_5_3
+    cvs -q tag Release_2010_11_01_GMT_4_5_5
 
 7.  Prepare the archives:
     make archive >& log
